# hdx-scraper-google-floods

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/google/floods/: __main__.py  pipeline.py
src/hdx/scraper/google/floods/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pipeline.py
tests/fixtures/input/: polygons_EiQKIDEyNDY0MzhhZjE5YzQ5MGVhMjc5MjU2YWRlZjY1Yjk4EAE.json  polygons_EiQKIDYxODllMGM1NzFlNDRiODc4NTBhZTAzYjI4ZWYyMGE0EAE.json  polygons_EiQKIDg4ZmUyODEwMGZlODRkN2I5ODZkYTljYTFmYTM1NTVlEAE.json  severe_events_0.json
